# Meta_hack

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: environment.py  main.py  models.py  state_manager.py  test_e2e_task1.py  test_e2e_task2.py  test_e2e_task3.py  test_task2.py
app/data/: corpus_task1.json  corpus_task2.json  corpus_task3.json  drug_labels.json
app/graders/: grader_task1.py  grader_task2.py  grader_task3.py  graders__init__.py
app/rewards/: reward_shaper.py
app/tasks/: task1_classification.py  task2_disproportionality.py  task3_masking.py  tasks__init__.py
baseline/: baseline_agent.py
server/: app.py
